--- a/flexbox.css
+++ b/flexbox.css
@@ -1,3 +1,5 @@
+
+
 .header{
 	font-size: 30px;
 	padding: 10px;
@@ -76,8 +78,13 @@ footer{
 	background-color: powderblue;
 	font-size: 30px;
 	color:blue;
-	padding: 10px;
 	text-align: center;
+	padding-top: 18px;
+}
+footer p{
+	text-align: right;
+	font-size: 10px;
+	color: black;
 }
 
 
