--- a/style.css
+++ b/style.css
@@ -1,14 +1,85 @@
+*{
+	padding: 0px;
+	margin-left: 10px;
+	margin-right: 10px;
+}
+
 body{
 	background-image: url(download.jfif);
 	opacity:100%;
 	background-attachment: fixed;
-
+	align-items: center;
+	justify-content: center;
+    display: flex;
 }
-form{
-	margin-left:25%;
-	margin-right: 25%;
-}
-fieldset{
+.container{
+	margin-top: 100px;
+	margin-bottom: 100px;
+	position: relative;
+	width: 500px;
 	height: auto;
-	width: auto;
+	background-color: #dedede;
+	border-radius: 5px;
+}
+.heading{
+	padding: 10px;
+	font-size: 30px;
+	font-family: sans-serif;
+	color: #130f40;
+	text-align: center;
+}
+.register_form{
+	padding: 20px 40px;
+}
+ label{
+	font-size: 18px;
+	color:#130f40;
+	margin: 0 10px;
+}
+.info input{
+	height:20px;
+	width: 350px;
+	padding: 5px 5px;
+	font-size: 18px;
+	border: 1px solid silver;
+	border-radius: 5px;
+}
+.radio {
+	padding: 0 10px;
+	
+}
+.other{
+	padding: 0px 10px;
+}
+
+.other input[type="date"]{
+	height: 25px;
+	width: 200px;
+	border: 1px solid silver;
+	border-radius: 5px;
+}
+.other textarea{
+	width: 300px;
+	border: 1px solid silver;
+	border-radius: 5px;
+}
+button{
+	height: 30px;
+	width: 100px;
+	margin: 0 18px;
+	font-size: 18px;
+	
+	border-radius: 5px;
+}
+#fname_error,#lname_error,#email_error,#pwd_error,#fname_alpha,#lname_alpha{
+	margin-top: 5px;
+	width: 345px;
+	font-size: 18px;
+	color:#C62828;
+	background: rgba(255,0,0,0.1);
+	text-align: center;
+	padding: 5px 8px;
+	border-radius: 3px;
+	border: 1px solid #EF9A9A;
+	display: none;
 }
